Re-Work: Attempting to restructure the entire repo so that it makes a little more sense to someone other than just me.